services/backend/deploy/k8s/staging/template/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-mind-backend-service
  namespace: vo-dang-${DEPLOY_ENV}-env
spec:
  selector:
    app: green-mind-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: vo-dang-${DEPLOY_ENV}-env
spec:
  selector:
    app: redis-service
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
      nodePort: 30637
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: vo-dang-${DEPLOY_ENV}-env
spec:
  selector:
    app: postgres-service
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 30543
  type: NodePort
