services/backend/deploy/k8s/staging/template/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: green-mind-backend-ingress
  namespace: vo-dang-${DEPLOY_ENV}-env
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: ${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: green-mind-backend-service
                port:
                  number: 80
